--- a/AplicacionWebRobledoHeymy/Blazor/Shared/NavMenu.razor
+++ b/AplicacionWebRobledoHeymy/Blazor/Shared/NavMenu.razor
@@ -9,16 +9,26 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+        <AuthorizeView Roles="Administrador, Usuario">
+        <Authorized>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Inicio
+                <span class="oi oi-home" aria-hidden="true"></span> Menu Principal
             </NavLink>
         </div>
+        </Authorized>
+        </AuthorizeView>
+
+         <AuthorizeView Roles="Administrador">
+             <Authorized>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="">
                 <span class="oi oi-plus" aria-hidden="true"></span> Usuarios
             </NavLink>
         </div>
+        </Authorized>
+        </AuthorizeView>
+       
     </nav>
 </div>
 
